<resources>
    <string name="app_name">Mench\'d</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="logo">Mench\'d</string>
    <string name="user_name">User Name</string>
    <string name="prompt_email">Email ID</string>
    <string name="password">Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Password Action</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="forget_password">Password ?</string>
    <string name="sepline">OR</string>
    <string name="action_register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="google_address_lookup">http://maps.googleapis.com/maps/api/geocode/json?sensor=true</string>
    <string name="json_url">http://www.menchd.com/client</string>
    <string name="register_url">http://www.menchd.com/register</string>
    <string name="update_profile_url">http://www.menchd.com/update_profile</string>
    <string name="update_other_image_url">http://www.menchd.com/other_images</string>
    <string name="send_message_url">http://www.menchd.com/client/send_message2</string>
	<string name="video_upload_url">http://menchd.com/cloudfiles/uploadVideoFile</string>
	<string name="video_delete_url">http://menchd.com/cloudfiles/deleteProfileVideo</string>
	<string name="number">5</string>
    <string name="forsquare_client_id">HF3TO1LVC1PPQQG1E1CCEYKVS5JBKCZ02OGKWBCOTSW4YIF0</string>
    <string name="forsquare_client_secret">UB4STITEWGEVULMO44FEXWLESRNG3FNEZ1E0MK55PUSABMHH</string>
    <string name="forsquare_url">https://api.foursquare.com/v2/venues/search?</string>
    <string name="foursquare_location_url">https://foursquare.com/v/</string>
    <string name="GPSAlertDialogTitle">GSP Settings</string>
    <string name="GPSAlertDialogMessage">Enable GSP?</string>
    <string name="settings">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="recommandation">RECOMMENDATIONS</string>
    <string name="log_out">Log Out</string>
    <string name="hello_profile">Welcome to profile window</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="first_name">User Name</string>
    <string name="age_location">Age, City</string>
    <string name="percentage">00%</string>
    <string name="basics_btn">BASICS</string>
    <string name="about_btn">ABOUT</string>
    <string name="photos_btn">PHOTOS</string>
    <string name="message">MESSAGES</string>
    <string name="question_btn">QUESTIONS</string>
    <string name="horoscope">Horoscope</string>
    <string name="religion">Religion</string>
    <string name="home_town">Home Town</string>
    <string name="current_city">Current City</string>
    <string name="college_univercity">College/University</string>
    <string name="college">College</string>
    <string name="career_field">Career Field</string>
    <string name="basics_txt">Not yet added</string>
    <string name="languages">Languages</string>
    <string name="term">Term</string>
    <string name="income">Income</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="body_type">Body Type</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="location">Location</string>
    <string name="smoke">Smoke</string>
    <string name="drink">Drink</string>
    <string name="weed">Weed</string>
    <string name="drug">Drug</string>
    <string name="diet">Diet</string>
    <string name="sex">Sex</string>
    <string name="position">Position</string>
    <string name="pets">Pets</string>
    <string name="kids_question">Do you have kids ?</string>
    <string name="want_kids">Do you want kids ?</string>
    <string name="title_activity_pro_tab">ProTabActivity</string>
    <string name="title_activity_prof_tab">ProfTabActivity</string>
    <string name="title_activity_photo_tab">PhotoTabActivity</string>
    <string name="photo_tab">Photo Activity</string>
    <string name="message_tab">Message Activity</string>
    <string name="questions_tab">Questions Activity</string>
    <string name="title_activity_profile_tab">ProfileTabActivity</string>
    <string name="profile">PROFILE</string>
    <string name="title_activity_basic_prof">BasicProfActivity</string>
    <string name="title_activity_message_tab">MessageTabActivity</string>
    <string name="title_activity_questions_tab">QuestionsTabActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_profile_home">ProfileHomeActivity</string>
    <string name="profile_edit">EDIT PROFILE</string>
    <string name="details_edit">EDIT DETAILS</string>
    <string name="question_edit">EDIT QUESTIONS</string>
    <string name="basic_edit">EDIT BASIC</string>
    <string name="photo_edit">EDIT PHOTO</string>
    <string name="profile_basics">BASICS -</string>
    <string name="profile_details">DETAILS -</string>
    <string name="profile_message">MESSAGES -</string>
    <string name="profile_photos">PHOTOS -</string>
    <string name="profile_questions">QUESTIONS -</string>
    <string name="profile_">PROFILE - </string>
    <string name="logo_tag">Logo Tag Line</string>
    <string name="my_profile">My Profile</string>
    <string name="photo_face">Face</string>
    <string name="photo_body">Body</string>
    <string name="photo_misc">Misc</string>
    <string name="photo_group">Group Shot</string>
    <string name="photo_action">Action</string>
    <string name="him">Him: </string>
    <string name="you">You: </string>
    <string name="conversation">CONVERSATION</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="duration">Duration</string>
    <string name="description_zoom_touch_close">Image Zoom Close</string>
    <string name="title_activity_gallary">GallaryActivity</string>
    <string name="title_activity_routing">RoutingActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_instruction">Submit your registered email ID</string>
    <string name="submit">SUBMIT</string>
    <string name="your_email">Your Email</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration">REGISTRATION</string>
    <string name="name">NAME</string>
    <string name="password_cap">PASSWORD</string>
    <string name="dob">DOB</string>
    <string name="city">CITY</string>
    <string name="email">EMAIL</string>
    <string name="register">REGISTER</string>
    <string name="cancel_cap">Cancel</string>
    <string name="title_activity_city_search">CitySearchActivity</string>
    <string name="location_settings">Location Settings</string>
    <string name="current_location">Use your current location</string>
    <string name="custom_city_search">Search you city</string>
    <string name="search">Search</string>
    <string name="title_activity_iagree">IagreeActivity</string>
    <string name="user_agreement">User Agreement</string>
    <string name="title_activity_terms">Terms Activity</string>
    <string name="title_ask_question">Ask Question Activity</string>
    <string name="i_agree">I Agree</string>
    <string name="edit_picture">&#160;Edit Picture</string>
    <string name="add_video">&#160;Add Video</string>
    <string name="add_photos">Add Photos</string>
    <string name="university_prompt">Select University/College</string>
    <string name="keyword">Keywords</string>
    <string name="set_height">SET HEIGHT</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="clear_btn">Clear Button</string>
    <string name="save_btn">Save Button</string>
    <string name="set_location">SET LOCATION</string>
    <string name="location_anywhere">Location Anywhere</string>
    <string name="location_near_me">Location Near Me</string>
    <string name="location_user_current">Use My Current Location</string>
    <string name="set_keyword">SET KEYWORDS</string>
    <string name="add_meet">MeetMe add button</string>
    <string name="app_settings">SETTINGS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="push_notifications">PUSH NOTIFICATIONS</string>
    <string name="alert_when_some_one_marks_me_fav">Alert when some one marks me Fav</string>
    <string name="alert_for_unread_messages_while_offline">Alert for unread messages while offline</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="blocked_user_list">BLOCKED USERS LIST</string>
    <string name="terms_and_conditions">TERMS &amp; CONDITIONS</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="my_video">My Video</string>
</resources>