<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"        
        android:background="@drawable/topnav"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/forgot_layout"
        android:background="@drawable/loginbg" >

        <TextView
            android:id="@+id/forgot_instruction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgot_instruction" />

        <EditText
            android:id="@+id/email"
            style="@drawable/textbox_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:padding="5dp"
            android:hint="@string/your_email"
            android:background="@drawable/txtbox"
            />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnsubmit"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
