<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@android:color/background_dark" >
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/topnav"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/topnav" >
        <ImageButton
             android:id="@+id/clear_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@null"
             android:src="@drawable/buttonback"
             android:contentDescription="@string/clear_btn" /> 
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"   
            android:layout_centerInParent="true"         
            android:text="@string/app_settings"
            android:textColor="@android:color/white" />                
    </RelativeLayout>
        <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/topnav"
		android:id="@+id/basics_layout"
		android:background="@drawable/pattern"
		android:orientation="vertical"
		android:padding="5dp">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textColor="@android:color/white"
            android:padding="5dp"/>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@color/chat_popup_gray">
            	<RelativeLayout
            	    android:id="@+id/rl_sec1" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:layout_marginBottom="1dp">
            	    <TextView 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/push_notifications"
            	    android:textColor="@android:color/black"
            	    android:padding="5dp" />
            	</RelativeLayout>
            	<RelativeLayout
            	    android:id="@+id/rl_sec2" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:layout_marginBottom="1dp"
            	    android:padding="5dp">
            	    <TextView 
            	        android:layout_width="wrap_content"
            	        android:layout_height="wrap_content"
            	        android:text="@string/alert_when_some_one_marks_me_fav"
            	        android:textColor="@android:color/background_dark"
            	        android:textSize="12sp"
            	        android:padding="5dp" />
            	    <ImageView
            	        android:id="@+id/fav_settings"
            	        android:layout_width="wrap_content"
            	        android:layout_height="wrap_content"
            	        android:src="@drawable/setoff"
            	        android:layout_alignParentRight="true"
            	        android:layout_marginRight="5dp"
            	        android:layout_centerVertical="true" />
            	</RelativeLayout>
            	<RelativeLayout
            	    android:id="@+id/rl_sec3"  
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:padding="5dp">
            	    <TextView 
            	        android:layout_width="wrap_content"
            	        android:layout_height="wrap_content"
            	        android:text="@string/alert_for_unread_messages_while_offline"
            	        android:textColor="@android:color/background_dark"
            	        android:textSize="12sp"
            	        android:padding="5dp" />
            	    <ImageView
            	        android:id="@+id/message_settings"
            	        android:layout_width="wrap_content"
            	        android:layout_height="wrap_content"
            	        android:src="@drawable/setoff"
            	        android:layout_alignParentRight="true"
            	        android:layout_marginRight="5dp"  />
            	</RelativeLayout>
            	
        </LinearLayout>
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textColor="@android:color/white"
            android:padding="5dp"/>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@color/chat_popup_gray">
            	<RelativeLayout
            	    android:id="@+id/change_password" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:layout_marginBottom="1dp"
            	    android:padding="5dp">
            	    <TextView 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/change_password"
            	    android:textColor="@android:color/black"
            	    android:padding="5dp" />
            	</RelativeLayout>
            	<RelativeLayout
            	    android:id="@+id/recommandation" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:layout_marginBottom="1dp"
            	    android:padding="5dp">
            	    <TextView
            	        android:id="@+id/recommendation" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/recommandation"
            	    android:textColor="@android:color/black"
            	    android:padding="5dp" />
            	</RelativeLayout>
            	<RelativeLayout
            	    android:id="@+id/blocked_user_list"  
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:padding="5dp">
            	    <TextView 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/blocked_user_list"
            	    android:textColor="@android:color/black"
            	    android:padding="5dp" />
            	</RelativeLayout>
            	
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/chat_popup_gray">
            	<RelativeLayout
            	    android:id="@+id/terms_and_conditions" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:layout_marginBottom="1dp"
            	    android:padding="5dp">
            	    <TextView 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/terms_and_conditions"
            	    android:textColor="@android:color/black"
            	    android:padding="5dp" />
            	</RelativeLayout>
            	<RelativeLayout
            	    android:id="@+id/privacy_policy" 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:background="@android:color/white"
            	    android:layout_marginBottom="1dp"
            	    android:padding="5dp">
            	    <TextView 
            	    android:layout_width="match_parent"
            	    android:layout_height="wrap_content"
            	    android:text="@string/privacy_policy"
            	    android:textColor="@android:color/black"
            	    android:padding="5dp" />
            	</RelativeLayout>
            	
        </LinearLayout>
        <ImageView
            android:id="@+id/del_account" 
            android:src="@drawable/delaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>
        </LinearLayout>
</RelativeLayout>