<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoPlayActivity"
    android:background="@android:color/background_dark" >
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/topnav"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/topnav" >
        <ImageButton
             android:id="@+id/clear_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:background="@null"
             android:src="@drawable/buttonback"
             android:contentDescription="@string/clear_btn" /> 
        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"   
            android:layout_centerInParent="true"         
            android:text="@string/my_video"
            android:textColor="@android:color/white" />
        <ImageButton
             android:id="@+id/report_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
             android:src="@drawable/btnreport"
             android:contentDescription="@string/add_meet"  />        
    </RelativeLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/basics_layout"
		android:background="@drawable/loginbg"
		android:orientation="vertical"
		android:layout_below="@+id/topnav">
        <RelativeLayout
            android:id="@+id/videoLayout" 
   			android:layout_width="fill_parent"
    		android:layout_height="fill_parent">

		    	<VideoView
		        android:id="@+id/surface_view"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_gravity="center"/>
		</RelativeLayout>  
	</LinearLayout>	  

</RelativeLayout>